--- a/Project9/Project9.vcxproj
+++ b/Project9/Project9.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="15663  N과 M(9).cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="17144 미세먼지안녕!.cpp" />
     <ClCompile Include="1992 쿼드트리.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
