--- a/Project9/Project9.vcxproj.filters
+++ b/Project9/Project9.vcxproj.filters
@@ -126,5 +126,8 @@
     <ClCompile Include="17144 미세먼지안녕!.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="17143 낚시왕.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
