--- a/Project9/Project9.vcxproj.filters
+++ b/Project9/Project9.vcxproj.filters
@@ -129,5 +129,8 @@
     <ClCompile Include="17143 낚시왕.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="9012 괄호.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
