--- a/Project9/Project9.vcxproj.filters
+++ b/Project9/Project9.vcxproj.filters
@@ -132,5 +132,8 @@
     <ClCompile Include="9012 괄호.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2504 괄호의 값.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
