--- a/Project9/Project9.vcxproj.filters
+++ b/Project9/Project9.vcxproj.filters
@@ -135,5 +135,8 @@
     <ClCompile Include="2504 괄호의 값.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1929 소수구하기.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
